--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>RtoL git practice branches</title>
+    <link rel="stylesheet" type="text/css" href="first_stylesheet.css">
+    <link rel="stylesheet" type="text/css" href="second_stylesheet.css">
 </head>
 <body>
     <h1>GHCUYFHOHPOHIJ GIT GIT GIT</h1>
